# agent-genome-watcher

./: .env.example  .gitignore  README.ko.md  README.md  pyproject.toml  requirements.txt  run.sh
data/: genome_watcher.db
docs/prd/: PRD_agent-genome-watcher.md
docs/todo_plan/: PLAN_agent-genome-watcher.md
prompts/: discourse_pattern.txt  identity_archetype.txt  intra_post_journey.txt  meta_denial.txt  question_consumption.txt
src/: __init__.py  config.py  database.py
src/analysis/: __init__.py  __main__.py  analyzer.py  consumption.py  discourse.py  events.py  identity.py  journey.py  lifecycle.py  meta_denial.py  trajectory.py
src/api/: __init__.py  upstage.py
src/crawler/: __init__.py  __main__.py  moltbook.py
src/dashboard/: __init__.py  app.py
src/events/: __init__.py  __main__.py
